--- a/Jobba/package.json
+++ b/Jobba/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.9",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "react-html-id": "^0.1.2"
   },
   "engines": {
     "node": "^9.7.0"
