--- a/Jobba/package.json
+++ b/Jobba/package.json
@@ -31,7 +31,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.9",
     "morgan": "^1.9.0",
-    "react-html-id": "^0.1.2"
+    "react-html-id": "^0.1.2",
+    "styled-components": "^3.2.3"
   },
   "engines": {
     "node": "^9.7.0"
